[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/object_interact.gd" type="Script" id=1]

[node name="object" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="mouse" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="nearby" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[connection signal="input_event" from="mouse" to="." method="_on_mouse_input_event"]
[connection signal="area_entered" from="nearby" to="." method="_on_nearby_area_entered"]
[connection signal="area_exited" from="nearby" to="." method="_on_nearby_area_exited"]
